# SchoolRepository

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: email_config.py  security.py  settings.py
app/database/: database.py
app/models/: department.py  past_paper.py  reading_material.py  reearch_paper_author.py  research_paper.py  research_paper_author.py  school.py  signup_token.py  supervisor_comment.py  token.py  user.py
app/repository/: department.py  object_store.py  password_reset.py  past_paper.py  reading_material.py  research_paper.py  school.py  signup_token.py  user.py  user_jwt_token.py
app/routers/: department.py  lecturer.py  school.py  student.py  user.py
app/schemas/: department.py  past_paper.py  reading_material.py  research_paper.py  school.py  user.py
app/service/: department.py  email_service.py  lecturer.py  password_reset.py  school.py  student.py  user.py
app/templates/users/: approval.html  rejection.html
